# LLM-Sentiment-Analyzer

./: .gitignore  README.MD  pyproject.toml  requirements.txt
src/: main.py
